--- a/frontend/app/components/pages/admin/create/category/category.style.module.scss
+++ b/frontend/app/components/pages/admin/create/category/category.style.module.scss
@@ -31,5 +31,10 @@
     &:hover {
       background-color: #e5dad8;
     }
+
+    &:disabled {
+      background-color: #f2f2f2;
+      color: #bdbdbd;
+    }
   }
 }
