--- a/frontend/app/components/ui/sidebar/sidebar.style.module.scss
+++ b/frontend/app/components/ui/sidebar/sidebar.style.module.scss
@@ -57,6 +57,10 @@
     transform: rotate(90deg);
   }
 
+  &__title[data-state="open"] + &__collapse {
+    max-height: 15rem;
+  }
+
   &__icon {
     transition: transform 200ms cubic-bezier(0.87, 0, 0.13, 1);
   }
@@ -65,5 +69,7 @@
     margin-top: 10px;
     margin-left: 10px;
     overflow: hidden;
+    transition: max-height 0.2s ease;
+    max-height: 0;
   }
 }
