--- a/frontend/app/styles/global.css
+++ b/frontend/app/styles/global.css
@@ -12,6 +12,7 @@ h3 {
 }
 
 :root {
+    --gray-color: #f2f2f2;
     --primary-text-color: #3E3836;
     --primary-font-size: 16px;
     --secondary-font-size: 14px;
