--- a/frontend/app/components/pages/admin/layout/layout.module.scss
+++ b/frontend/app/components/pages/admin/layout/layout.module.scss
@@ -14,6 +14,10 @@
     gap: 10px;
 
     .topLine {
+      padding: 0 2rem;
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
     }
 
     .content {
