--- a/frontend/app/components/pages/authorization/authorization.style.module.scss
+++ b/frontend/app/components/pages/authorization/authorization.style.module.scss
@@ -4,6 +4,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
+  &__logo {
+    position: absolute;
+    margin-top: -600px;
+  }
 }
 
 .tabs {
@@ -13,7 +18,7 @@
   display: flex;
   flex-direction: column;
   width: 25rem;
-  box-shadow: 0 2px 10px var(--gray-color);
+  box-shadow: 0 2px 10px var(--shadow-color);
   border-radius: var(--medium-border-radius);
 }
 
