--- a/frontend/app/components/ui/sidebar/sidebar.style.module.scss
+++ b/frontend/app/components/ui/sidebar/sidebar.style.module.scss
@@ -1,10 +1,12 @@
 .sidebar {
-  height: 100%;
+  max-width: 15rem;
   display: grid;
   grid-template-rows: 1fr 8fr;
+  padding: 1rem 0;
 
   &__logo {
     margin-left: 2rem;
+    margin-bottom: 1rem;
     display: flex;
     align-items: center;
   }
