--- a/frontend/app/styles/global.css
+++ b/frontend/app/styles/global.css
@@ -6,15 +6,42 @@ body {
     font-family: Montserrat, sans-serif;
 }
 
+a,
 button,
 h3 {
     all: unset;
+}
+
+span {
+    position: relative;
+}
+
+span[data-title]:hover::after {
+    opacity: 1;
+    transition: all 0.1s ease 0.5s;
+    visibility: visible;
+}
+
+span[data-title]:after {
+    content: attr(data-title);
+    background-color: #fff;
+    border-radius: var(--small-border-radius);
+    font-size: var(--small-font-size);
+    position: absolute;
+    padding: 5px;
+    box-shadow: 0 2px 10px var(--shadow-color);
+    opacity: 0;
+    left: 10px;
+    top: -30px;
+    visibility: hidden;
 }
 
 :root {
     --shadow-color: #e3e3e3;
     --gray-color: #f2f2f2;
     --primary-text-color: #3E3836;
+    --large-font-size: 18px;
+    --small-font-size: 12px;
     --primary-font-size: 16px;
     --secondary-font-size: 14px;
     --small-border-radius: 5px;
