--- a/frontend/app/components/ui/sidebar/sidebar.style.module.scss
+++ b/frontend/app/components/ui/sidebar/sidebar.style.module.scss
@@ -1,14 +1,20 @@
 .sidebar {
   max-width: 15rem;
-  display: grid;
-  grid-template-rows: 1fr 8fr;
   padding: 1rem 0;
 
   &__logo {
-    margin-left: 2rem;
-    margin-bottom: 1rem;
+    position: sticky;
+    top: 0;
+    background-color: #FBF7F4;
+    padding-top: 1rem;
+    padding-left: 2rem;
+    padding-bottom: 1rem;
     display: flex;
     align-items: center;
+
+    &:hover {
+      cursor: pointer;
+    }
   }
 
   &__items {
@@ -16,7 +22,7 @@
     margin-right: 1rem;
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 5px;
   }
 }
 
@@ -55,6 +61,8 @@
 }
 
 .sidebarItemCollapsible {
+
+
   &__title[data-state="open"] > &__icon {
     transform: rotate(90deg);
   }
@@ -68,8 +76,11 @@
   }
 
   &__collapse {
-    margin-top: 10px;
-    margin-left: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    margin-top: 5px;
+    margin-left: 15px;
     overflow: hidden;
     transition: max-height 0.2s ease;
     max-height: 0;
