--- a/frontend/app/styles/global.css
+++ b/frontend/app/styles/global.css
@@ -38,10 +38,11 @@ span[data-title]:after {
 
 :root {
     --shadow-color: #e3e3e3;
+    --red-color: #ee5b62;
     --gray-color: #f2f2f2;
     --primary-text-color: #3E3836;
     --large-font-size: 18px;
-    --small-font-size: 12px;
+    --small-font-size: 13px;
     --primary-font-size: 16px;
     --secondary-font-size: 14px;
     --small-border-radius: 5px;
