--- a/frontend/app/components/pages/admin/create/category/category.style.module.scss
+++ b/frontend/app/components/pages/admin/create/category/category.style.module.scss
@@ -1,16 +1,24 @@
+.category {
+  background-color: #fff;
+  border-radius: var(--medium-border-radius);
+  width: 20rem;
+  padding: 2rem;
+
+  &__title {
+    font-size: var(--large-font-size);
+    font-weight: 600;
+  }
+}
 
 .form {
+  margin-top: 2rem;
+  width: 100%;
   display: flex;
   flex-direction: column;
-  background-color: #fff;
-  padding: 1rem;
-  width: 20rem;
-  gap: 5px;
-  border-radius: var(--medium-border-radius);
+  gap: 1.5rem;
 }
 
 .formField {
-  margin-top: 1rem;
   display: flex;
   align-items: center;
   gap: 10px;
