--- a/frontend/app/components/ui/hover-card/hover-card.style.module.scss
+++ b/frontend/app/components/ui/hover-card/hover-card.style.module.scss
@@ -1,10 +1,6 @@
 .hoverCard {
-
-  &__title {
-
-  }
-
   &__content {
+    z-index: 100;
     border-radius: var(--small-border-radius);
     box-shadow: hsl(206 22% 7% / 35%) 0px 10px 38px -10px, hsl(206 22% 7% / 20%) 0px 10px 20px -15px;
   }
