--- a/frontend/app/components/current-date/current-date.style.module.scss
+++ b/frontend/app/components/current-date/current-date.style.module.scss
@@ -3,7 +3,8 @@
   min-height: 34px;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
+  justify-content: center;
   background-color: #fff;
   font-weight: 500;
   color: var(--primary-text-color);
