--- a/frontend/app/components/current-date/current-date.style.module.scss
+++ b/frontend/app/components/current-date/current-date.style.module.scss
@@ -1,16 +1,17 @@
+@import "app/styles/mixins";
+
 .currentDate {
+  @include outside-container-style;
+
   min-width: 65px;
   min-height: 34px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #fff;
   font-weight: 500;
   color: var(--primary-text-color);
   padding: .37rem .8rem;
-  border-radius: var(--medium-border-radius);
-  box-shadow: 0 2px 10px var(--shadow-color);
 
   &__time {
     width: 100%;
