--- a/frontend/app/components/pages/admin/sub-categories/sub-categories.style.module.scss
+++ b/frontend/app/components/pages/admin/sub-categories/sub-categories.style.module.scss
@@ -1,3 +1,5 @@
+@import "app/styles/mixins";
+
 .subCategories {
   width: 96%;
   max-height: 75vh;
@@ -32,31 +34,6 @@
 
     &:first-child {
       border: none;
-    }
-  }
-}
-
-.contextMenu {
-  font-size: var(--secondary-font-size);
-  color: var(--primary-text-color);
-  padding: 10px;
-  background-color: #fff;
-  box-shadow: 0 2px 10px var(--shadow-color);
-  border-radius: var(--medium-border-radius);
-
-  &__item {
-    padding: .2rem .3rem;
-    margin-top: 5px;
-    border-radius: var(--small-border-radius);
-    outline: none;
-
-    &:first-child {
-      margin-top: 0;
-    }
-
-    &:hover {
-      cursor: pointer;
-      background-color: #e5dad8;
     }
   }
 }
