--- a/frontend/app/components/ui/context-menu/context-menu.style.module.scss
+++ b/frontend/app/components/ui/context-menu/context-menu.style.module.scss
@@ -1,9 +1,11 @@
+@import "app/styles/mixins";
+
 .contextMenu {
+  @include outside-container-style;
+
   font-size: var(--secondary-font-size);
   color: var(--primary-text-color);
   padding: 10px;
-  background-color: #fff;
-  box-shadow: 0 2px 10px var(--shadow-color);
   border-radius: var(--medium-border-radius);
 
   &__item {
@@ -17,8 +19,7 @@
     }
 
     &:hover {
-      cursor: pointer;
-      background-color: #e5dad8;
+      @include hover-on-item-admin;
     }
   }
 }
