--- a/frontend/app/styles/global.css
+++ b/frontend/app/styles/global.css
@@ -40,6 +40,7 @@ span[data-title]:after {
     --shadow-color: #e3e3e3;
     --red-color: #ee5b62;
     --gray-color: #f2f2f2;
+    --disabled-color: #aaa;
     --primary-text-color: #3E3836;
     --large-font-size: 18px;
     --small-font-size: 13px;
