--- a/frontend/app/components/pages/admin/categories/categories.style.module.scss
+++ b/frontend/app/components/pages/admin/categories/categories.style.module.scss
@@ -9,19 +9,33 @@
   .controls {
     margin: 1rem 0;
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     justify-content: flex-end;
+    gap: 1rem;
 
     &__hidden {
       @include outside-container-style;
-      padding: 10px;
+      padding: 11px;
       display: flex;
       align-items: center;
       gap: 10px;
     }
+
+    .controlsItem {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      gap: 5px;
+
+      &__label {
+        padding-left: 10px;
+        font-size: var(--small-font-size);
+      }
+    }
   }
 
   .cards {
+    margin-top: 1rem;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     gap: 1rem;
