--- a/frontend/app/components/pages/admin/products/products.style.module.scss
+++ b/frontend/app/components/pages/admin/products/products.style.module.scss
@@ -9,30 +9,33 @@
   .controls {
     margin: 1rem 0;
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     justify-content: flex-end;
     gap: 1rem;
 
     &__hidden {
       @include outside-container-style;
-      padding: 10px;
+      padding: 11px;
       display: flex;
       align-items: center;
       gap: 10px;
     }
 
-    .filters {
+    .controlsItem {
       display: flex;
-      gap: 1rem;
-      align-items: center;
+      flex-direction: column;
+      justify-content: flex-start;
+      gap: 5px;
 
       &__label {
-        font-size: var(--secondary-font-size);
+        padding-left: 10px;
+        font-size: var(--small-font-size);
       }
     }
   }
 
   .cards {
+    margin-top: 1rem;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-gap: 1rem;
