--- a/frontend/app/components/ui/input/input.style.module.scss
+++ b/frontend/app/components/ui/input/input.style.module.scss
@@ -52,14 +52,12 @@
     width: calc(100% - 17px);
     display: flex;
     align-items: center;
-    padding-left: 12px;
-    padding-right: 5px;
+    padding: 5px 5px 5px 12px;
     margin-top: 5px;
-    font-size: 12px;
+    font-size: var(--small-font-size);
     background: var(--red-color);
     border-radius: var(--small-border-radius);
     color: #fff;
-    height: 24px;
 
     &:empty {
       opacity: 0;
