add edit popups; add context menu hook

--- a/frontend/app/styles/admin/admin-page.style.module.scss
+++ b/frontend/app/styles/admin/admin-page.style.module.scss
@@ -52,4 +52,10 @@
       grid-template-columns: repeat(3, 1fr);
     }
   }
+
+  .card {
+    &__notSetField {
+      color: #b6b6b6;
+    }
+  }
 }
