--- a/frontend/app/components/ui/card/card.style.module.scss
+++ b/frontend/app/components/ui/card/card.style.module.scss
@@ -40,6 +40,7 @@
       padding: .5rem 1rem;
       display: flex;
       justify-content: space-between;
+      cursor: default;
 
       &_alignEnd {
         justify-content: flex-end;
