--- a/frontend/app/components/ui/dialog/dialog.style.module.scss
+++ b/frontend/app/components/ui/dialog/dialog.style.module.scss
@@ -10,7 +10,7 @@
   z-index: 100;
   background-color: #fff;
   border-radius: var(--medium-border-radius);
-  box-shadow: hsl(206 22% 7% / 35%) 0px 10px 38px -10px, hsl(206 22% 7% / 20%) 0px 10px 20px -15px;
+  box-shadow: hsl(206 22% 7% / 35%) 0 10px 38px -10px, hsl(206 22% 7% / 20%) 0px 10px 20px -15px;
   padding: 25px;
 
   &__left {
