--- a/frontend/app/components/ui/select/select.style.module.scss
+++ b/frontend/app/components/ui/select/select.style.module.scss
@@ -29,6 +29,7 @@
 }
 
 .selectContent {
+  z-index: 99999;
   background-color: white;
   border-radius: 6px;
   box-shadow: 0 2px 10px var(--gray-color);
