add promotions list; add districts list; minor fixes

--- a/frontend/app/components/pages/admin/district/update/district.style.module.scss
+++ b/frontend/app/components/pages/admin/district/update/district.style.module.scss
@@ -1,6 +1,8 @@
-.ingredient {
-	background-color: #fff;
-	border-radius: var(--medium-border-radius);
+@import '../../../../../styles/mixins';
+
+.district {
+	@include outside-container-style-without-shadow;
+
 	width: 20rem;
 	padding: 2rem;
 
