--- a/frontend/app/components/ui/card/card.style.module.scss
+++ b/frontend/app/components/ui/card/card.style.module.scss
@@ -42,11 +42,11 @@
 			justify-content: space-between;
 			cursor: default;
 
-			&_alignEnd {
+			&_align-end {
 				justify-content: flex-end;
 			}
 
-			&_alignStart {
+			&_align-start {
 				justify-content: flex-start;
 			}
 
