--- a/frontend/app/components/pages/admin/promotion/update/promotion.style.module.scss
+++ b/frontend/app/components/pages/admin/promotion/update/promotion.style.module.scss
@@ -1,8 +1,8 @@
-.ingredient {
-	background-color: #fff;
+.promotion {
+	width: 27rem;
 	border-radius: var(--medium-border-radius);
-	width: 20rem;
-	padding: 2rem;
+	background-color: #fff;
+	padding: 1rem;
 
 	&__title {
 		font-size: var(--large-font-size);
@@ -12,25 +12,31 @@
 
 .form {
 	margin-top: 2rem;
-	width: 100%;
 	display: flex;
 	flex-direction: column;
-	gap: 1.5rem;
 }
 
-.formField {
+.formWithColumns {
 	display: flex;
-	align-items: center;
-	gap: 10px;
+	justify-content: space-between;
 
-	&__label {
-		font-size: var(--secondary-font-size);
-		font-weight: 600;
+	&__columnFields {
+		display: flex;
+		flex-direction: column;
+		gap: 25px;
+
+		& h3 {
+			font-weight: 600;
+		}
 	}
+}
+
+.formFooter {
+	margin-top: 2rem;
 
 	&__button {
-		width: 8rem;
-		height: 2rem;
+		width: 12rem;
+		height: 2.5rem;
 		text-align: center;
 		font-weight: 600;
 		border-radius: var(--small-border-radius);
@@ -44,5 +50,16 @@
 			background-color: #f2f2f2;
 			color: #bdbdbd;
 		}
+	}
+}
+
+.formField {
+	display: flex;
+	align-items: center;
+	gap: 10px;
+
+	&__label {
+		font-size: var(--secondary-font-size);
+		font-weight: 600;
 	}
 }
