--- a/frontend/app/components/ui/confirm-dialog/confirm-dialog.style.module.scss
+++ b/frontend/app/components/ui/confirm-dialog/confirm-dialog.style.module.scss
@@ -14,7 +14,7 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	padding: 25px;
+	padding: 0 30px 50px 30px;
 
 	&:focus {
 		outline: none;
