--- a/frontend/app/components/ui/select/select.style.module.scss
+++ b/frontend/app/components/ui/select/select.style.module.scss
@@ -6,7 +6,7 @@
 	border-radius: var(--small-border-radius);
 	font-size: var(--small-font-size);
 	padding: 0 1rem;
-	height: 2.62rem;
+	height: 2rem;
 	background-color: #fff;
 	color: var(--primary-text-color);
 	box-shadow: 0 2px 10px var(--gray-color);
@@ -31,7 +31,7 @@
 .selectContent {
 	min-width: 200px;
 	z-index: 99999;
-	background-color: white;
+	background-color: #fff;
 	border-radius: 6px;
 	box-shadow: 0 2px 10px var(--gray-color);
 
