--- a/frontend/app/components/admin/user-info/user-avatar.style.module.scss
+++ b/frontend/app/components/admin/user-info/user-avatar.style.module.scss
@@ -6,7 +6,8 @@
 	display: flex;
 	align-items: center;
 	gap: 0.5rem;
-	padding: 0.8rem;
+	height: 3rem;
+	padding: 0 1rem;
 
 	&__label {
 		font-size: var(--secondary-font-size);
