add file dropzone promotion; fix bugs

--- a/frontend/app/components/products/product-item.style.module.scss
+++ b/frontend/app/components/products/product-item.style.module.scss
@@ -4,6 +4,12 @@
 	gap: 10px;
 
 	.image {
+		& img {
+			object-position: center;
+			object-fit: cover;
+			width: 100%;
+			height: 250px;
+		}
 	}
 
 	.title {
