--- a/frontend/app/components/ui/card/card.style.module.scss
+++ b/frontend/app/components/ui/card/card.style.module.scss
@@ -17,6 +17,7 @@
 
 			&__title {
 				font-size: var(--primary-font-size);
+				white-space: nowrap;
 
 				&_small {
 					font-size: var(--small-font-size);
